--- a/style.css
+++ b/style.css
@@ -447,3 +447,15 @@ html[data-theme="light"] .finalCard{background:rgba(0,0,0,.03)}
   .stamp{transform:rotate(-6deg)}
   .finalGrid{grid-template-columns:1fr}
 }
+
+.fileHidden{
+  position:absolute;
+  width:1px;
+  height:1px;
+  padding:0;
+  margin:-1px;
+  overflow:hidden;
+  clip:rect(0,0,0,0);
+  white-space:nowrap;
+  border:0;
+}
